# parallel-magaraga

./: .gitignore  CMakeLists.txt  README.md  chessboard.cpp  chessboard.h  log_duration.h  maharaja.cpp  maharaja.h  main.cpp  readme.txt
